# RunningLocalLLMModel

./: .replit  package.json  pnpm-lock.yaml  replit.md
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  canvas-proxy-hardening.md  desktop-workspace-package-imports.md  llama-cpp-version-pinning.md  studycore-vs-rag-attachments.md  web-desktop-shared-tauri-imports.md
.github/workflows/: build-windows.yml
artifacts/api-server/src/routes/: canvas.ts  index.ts
artifacts/landing/: index.html
artifacts/landing/.replit-artifact/: artifact.toml
artifacts/landing/public/: manifest.webmanifest  sw.js
artifacts/landing/src/: App.tsx  index.css  main.tsx  webgpu.d.ts
artifacts/landing/src/components/landing/: FeatureSequence.tsx  HeroTerminal.tsx  InstallCTA.tsx  LiveStats.tsx  MagneticWrapper.tsx  ModelStatsPicker.tsx  PrivacySection.tsx  ProgressBar.tsx  WebGPUDetector.tsx
artifacts/landing/src/hooks/: usePWAInstall.ts
artifacts/landing/src/lib/: registerSW.ts
artifacts/landing/src/pages/: Landing.tsx
artifacts/localmodel-studio/: index.html  package.json  vite.config.ts
artifacts/localmodel-studio/.replit-artifact/: artifact.toml
artifacts/localmodel-studio/src/: App.tsx
artifacts/localmodel-studio/src/components/: CapabilityModal.tsx  Layout.tsx
artifacts/localmodel-studio/src/components/studycore/: SubjectRecommendations.tsx
artifacts/localmodel-studio/src/lib/: tauri-core-stub.ts
artifacts/localmodel-studio/src/pages/: Chat.tsx  Connections.tsx  CourseLibrary.tsx  Dashboard.tsx  Home.tsx  Models.tsx  Privacy.tsx  RubricChecker.tsx  Settings.tsx  Tuning.tsx
artifacts/localmodel-studio/src/services/: capabilityReport.ts  cloudProviders.ts  fileExtractor.ts  ollamaService.ts  storageService.ts  systemInfo.ts  webllmService.ts
artifacts/localmodel-studio/src/services/rag/: rag.ts  ragBackend.ts  types.ts
artifacts/localmodel-studio/src/services/studycore/: aiRunner.ts  courseLibrary.ts  privacy.ts  rubric.ts  types.ts
attached_assets/: Pasted--Required-Feature-Expansion-Materials-Course-Knowledge-_1781922349393.txt  Pasted-Update-the-existing-app-by-adding-a-realistic-Model-Set_1779098157544.txt  Pasted-You-are-a-senior-full-stack-engineer-building-a-product_1779086646078.txt
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: fetch-model.ps1  fetch-model.sh
desktop/src/: App.tsx  api.ts  capability.ts  cloudProviders.ts  index.css  storage.ts  styles.css  tuning.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: download.rs  embeddings.rs  inference.rs  main.rs  rag_store.rs  vision.rs
desktop/src/components/: Layout.tsx
desktop/src/components/studycore/: AIHelpWizard.tsx  MaterialsPanel.tsx  PrivacyBadge.tsx
desktop/src/pages/: Assignments.tsx  Chat.tsx  Dashboard.tsx  Grades.tsx  Growth.tsx  KnowledgeBase.tsx  Models.tsx  Planner.tsx  Privacy.tsx  Settings.tsx  Tuning.tsx
desktop/src/services/: backendCapabilities.ts  cloudProviders.ts  fileExtractor.ts  imageAttach.ts  optimizationEngine.ts  storageService.ts  systemInfo.ts  webllmService.ts
desktop/src/services/rag/: chunker.ts  rag.ts  ragBackend.ts  types.ts
desktop/src/services/studycore/: aiContext.ts  aiRunner.ts  assignmentType.ts  grades.ts  modelRecommendations.ts  planner.ts  seed.ts  store.ts  types.ts
desktop/stubs/: api-client-react.ts
lib/api-spec/: openapi.yaml
scripts/src/: generate-pwa-icons.ts
