[package]
name = "localmodel-studio-desktop"
version = "0.1.0"
description = "LocalModel Studio — native desktop app"
authors = ["LocalModel Studio"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1"
parking_lot = "0.12"

# llama.cpp Rust bindings. Compiles llama.cpp from source on first build.
# https://crates.io/crates/llama-cpp-2
# Pinned: 0.1.55+ replaced the direct sample_top_p/sample_temp/sample_token
# methods on LlamaTokenDataArray with the new LlamaSampler chain API, which
# would require rewriting inference.rs. Stay on 0.1.54.
llama-cpp-2 = "=0.1.54"

[features]
default = []
# Enable CUDA acceleration on NVIDIA GPUs. Off by default to keep the build portable.
cuda = ["llama-cpp-2/cuda"]
# Enable Vulkan acceleration (works across AMD/NVIDIA/Intel).
vulkan = ["llama-cpp-2/vulkan"]
