[package]
name = "localmodel-studio-desktop"
version = "0.1.0"
description = "LocalModel Studio — native desktop app"
authors = ["LocalModel Studio"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }
anyhow = "1"
parking_lot = "0.12"

# Used by the in-app model downloader (Hugging Face GGUF fetcher).
# rustls-tls avoids the OpenSSL system-dep on Windows.
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"

# llama.cpp Rust bindings. Compiles llama.cpp from source on first build.
# https://crates.io/crates/llama-cpp-2
# Pinned: 0.1.55+ replaced the direct sample_top_p/sample_temp/sample_token
# methods on LlamaTokenDataArray with the new LlamaSampler chain API, which
# would require rewriting inference.rs. Stay on 0.1.54.
llama-cpp-2 = "=0.1.54"

[features]
default = []
# Enable CUDA acceleration on NVIDIA GPUs (via llama.cpp's cuBLAS backend).
# Off by default to keep the build portable. 0.1.54 only exposes cublas/metal.
cuda = ["llama-cpp-2/cublas"]
# Apple Metal acceleration. Only meaningful on macOS builds.
metal = ["llama-cpp-2/metal"]
