[package]
name = "localmodel-studio-desktop"
version = "0.1.0"
description = "LocalModel Studio — native desktop app"
authors = ["LocalModel Studio"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }
anyhow = "1"
parking_lot = "0.12"

# Used by the in-app model downloader (Hugging Face GGUF fetcher).
# rustls-tls avoids the OpenSSL system-dep on Windows.
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"

# Used by inference.rs to decode multi-byte UTF-8 pieces from token_to_piece
# (llama-cpp-2 0.1.146 requires the caller to supply a Decoder).
encoding_rs = "0.8"

# llama.cpp Rust bindings. Compiles llama.cpp from source on first build.
# https://crates.io/crates/llama-cpp-2
# Pinned to 0.1.146 — 0.1.54 embedded an older llama.cpp that can't load
# modern GGUF v3 conversions (e.g. bartowski's current Llama 3.2 / Qwen2 /
# Phi 3.5 / Mistral 0.3 quants). 0.1.146 vendors a recent llama.cpp and
# uses the new `LlamaSampler` chain API (see inference.rs).
llama-cpp-2 = "=0.1.146"

[features]
default = []
# Enable CUDA acceleration on NVIDIA GPUs. 0.1.146 renamed the feature
# from `cublas` to `cuda`.
cuda = ["llama-cpp-2/cuda"]
# Apple Metal acceleration. Only meaningful on macOS builds.
metal = ["llama-cpp-2/metal"]
# Vulkan acceleration (cross-vendor GPU).
vulkan = ["llama-cpp-2/vulkan"]
